Import of TOKUHIROM/HTTPx-Dispatcher-0.04 from CPAN.
gitpan-cpan-distribution: HTTPx-Dispatcher
gitpan-cpan-version:      0.04
gitpan-cpan-path:         TOKUHIROM/HTTPx-Dispatcher-0.04.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -3,6 +3,7 @@ abstract: the uri dispatcher
 author: 
   - Tokuhiro Matsuno <tokuhirom@gmail.com>
 build_requires: 
+  Test::MockObject: 0
   Test::More: 0
   YAML: 0
 distribution_type: module
@@ -21,4 +22,4 @@ requires:
   Exporter: 5.58
   HTTP::Request: 1.4
   perl: 5.8.0
-version: 0.02
+version: 0.04
