--- a/META.yml
+++ b/META.yml
@@ -1,25 +1,34 @@
---- 
-abstract: the uri dispatcher
-author: 
-  - Tokuhiro Matsuno <tokuhirom@gmail.com>
-build_requires: 
-  Test::MockObject: 0
+---
+abstract: 'the uri dispatcher'
+author:
+  - 'Tokuhiro Matsuno <tokuhirom@gmail.com>'
+build_requires:
+  ExtUtils::MakeMaker: 6.42
   Test::More: 0
+  Test::Requires: 0
   YAML: 0
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: Module::Install version 0.68
+generated_by: 'Module::Install version 0.91'
 license: perl
-meta-spec: 
-  url: http://module-build.sourceforge.net/META-spec-v1.3.html
-  version: 1.3
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
 name: HTTPx-Dispatcher
-no_index: 
-  directory: 
+no_index:
+  directory:
     - inc
     - t
-requires: 
+    - xt
+requires:
   Class::Accessor::Fast: 0.3
   Exporter: 5.58
+  Filter::Util::Call: 0
   HTTP::Request: 1.4
+  URI: 1.36
   perl: 5.8.0
-version: 0.04
+resources:
+  license: http://dev.perl.org/licenses/
+  repository: git://github.com/tokuhirom/p5-httpx-dispatcher.git
+version: 0.06
