--- a/META.yml
+++ b/META.yml
@@ -1,16 +1,13 @@
 ---
-abstract: 'the uri dispatcher'
+abstract: 'the uri dispatcher(DEPRECATED)'
 author:
   - 'Tokuhiro Matsuno <tokuhirom@gmail.com>'
 build_requires:
   ExtUtils::MakeMaker: 6.42
-  Test::More: 0
-  Test::Requires: 0
-  YAML: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.91'
+generated_by: 'Module::Install version 1.00'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -31,4 +28,4 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/tokuhirom/p5-httpx-dispatcher.git
-version: 0.07
+version: 0.08
