--- a/META.yml
+++ b/META.yml
@@ -4,10 +4,13 @@ author:
   - 'Tokuhiro Matsuno <tokuhirom@gmail.com>'
 build_requires:
   ExtUtils::MakeMaker: 6.42
+  Test::Base: 0
+  Test::More: 0
+  Test::Requires: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 1.00'
+generated_by: 'Module::Install version 1.02'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -21,11 +24,10 @@ no_index:
 requires:
   Class::Accessor::Fast: 0.3
   Exporter: 5.58
-  Filter::Util::Call: 0
   HTTP::Request: 1.4
   URI: 1.36
   perl: 5.8.0
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/tokuhirom/p5-httpx-dispatcher.git
-version: 0.08
+version: 0.09
